[gd_scene load_steps=29 format=3 uid="uid://cuuem545ega72"]

[ext_resource type="Script" uid="uid://cptm56sk2qede" path="res://Scripts/ui/hud/hud_manager.gd" id="1_36s6t"]
[ext_resource type="Script" uid="uid://b3p4e86xoqqh3" path="res://Scripts/ui/hud/cooldowns.gd" id="2_36s6t"]
[ext_resource type="PackedScene" uid="uid://dw5jqew75whcf" path="res://Scenes/HPBar.tscn" id="2_ajim5"]
[ext_resource type="Texture2D" uid="uid://dnop5pqrq8fbx" path="res://Assets/ui/DashIcon.png" id="4_0iicw"]
[ext_resource type="Texture2D" uid="uid://b343ghjhwphjn" path="res://Assets/ui/punch.png" id="4_oersf"]
[ext_resource type="Texture2D" uid="uid://cvquudwe72x8p" path="res://Assets/ui/kick.png" id="5_oersf"]
[ext_resource type="Texture2D" uid="uid://chmb0vt4rda71" path="res://Assets/ui/player_UI_view.png" id="6_yidpd"]
[ext_resource type="Script" uid="uid://cnrj2cq3cvdn7" path="res://Scripts/ui/inventory/trash_slot.gd" id="9_36s6t"]
[ext_resource type="Script" uid="uid://dglo22okhueyv" path="res://Scripts/items/item_pickup.gd" id="9_484xk"]
[ext_resource type="Script" uid="uid://c8noump2yhng5" path="res://Scripts/ui/inventory/augment_slot.gd" id="9_pbtju"]
[ext_resource type="PackedScene" uid="uid://cexexdh4re63h" path="res://Scenes/inventory_slot.tscn" id="10_36s6t"]
[ext_resource type="Script" uid="uid://c081ighahaot6" path="res://Scripts/ui/pause_menu.gd" id="10_lkt4f"]
[ext_resource type="Script" uid="uid://dmr6e5sqx26og" path="res://Scripts/ui/button.gd" id="11_wfkbc"]
[ext_resource type="Script" uid="uid://cdh5pjfwavchk" path="res://Scripts/ui/inventory/pickup_slot.gd" id="12_yidpd"]
[ext_resource type="PackedScene" uid="uid://btj605votyjy8" path="res://Scenes/settings_menu.tscn" id="16_36s6t"]
[ext_resource type="Texture2D" uid="uid://cev4768d6kdbs" path="res://Assets/ui/UI_player_defeated.png" id="19_pbtju"]
[ext_resource type="Script" uid="uid://6jore1um42bw" path="res://Scripts/ui/game_over.gd" id="23_vxf74"]

[sub_resource type="ImageTexture" id="ImageTexture_36s6t"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_8gbba"]
size = Vector2(50, 50)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kry3j"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_21xkr"]
bg_color = Color(0, 0, 0, 0.50980395)

[sub_resource type="Gradient" id="Gradient_oersf"]
colors = PackedColorArray(0.8117647, 0.34117648, 0.23529412, 1, 0.36952475, 0.12646213, 0.07188853, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_484xk"]
gradient = SubResource("Gradient_oersf")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_ajim5"]
colors = PackedColorArray(0.64705884, 0.1882353, 0.1882353, 1, 0.23560971, 0.04361274, 0.0441664, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vxf74"]
gradient = SubResource("Gradient_ajim5")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ba8gd"]

[sub_resource type="Gradient" id="Gradient_484xk"]
colors = PackedColorArray(0.5058824, 0.5921569, 0.5882353, 1, 0.20233059, 0.25321814, 0.2510226, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lkt4f"]
gradient = SubResource("Gradient_484xk")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_36s6t")
metadata/_edit_horizontal_guides_ = []

[node name="HPBarPlayer" parent="." instance=ExtResource("2_ajim5")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 415.6
offset_bottom = 51.0
grow_horizontal = 1
grow_vertical = 1

[node name="HPBars" type="Node2D" parent="."]

[node name="SkillCooldowns" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -89.0
offset_right = 153.0
grow_vertical = 0
script = ExtResource("2_36s6t")
default_primary_attack_icon = ExtResource("4_oersf")
default_secondary_attack_icon = ExtResource("5_oersf")
default_active_item_icon = SubResource("ImageTexture_36s6t")

[node name="MarginContainer" type="MarginContainer" parent="SkillCooldowns"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 343.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="SkillCooldowns/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PrimaryAttack" type="TextureRect" parent="SkillCooldowns/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_8gbba")
expand_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="SkillCooldowns/MarginContainer/HBoxContainer/PrimaryAttack"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_kry3j")
theme_override_styles/fill = SubResource("StyleBoxFlat_21xkr")
fill_mode = 2
show_percentage = false

[node name="Timer" type="Timer" parent="SkillCooldowns/MarginContainer/HBoxContainer/PrimaryAttack"]
one_shot = true

[node name="Background" type="TextureRect" parent="SkillCooldowns/MarginContainer/HBoxContainer/PrimaryAttack"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -34.5
offset_right = 34.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_484xk")
expand_mode = 2

[node name="SecondaryAttack" type="TextureRect" parent="SkillCooldowns/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_8gbba")
expand_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="SkillCooldowns/MarginContainer/HBoxContainer/SecondaryAttack"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_kry3j")
theme_override_styles/fill = SubResource("StyleBoxFlat_21xkr")
fill_mode = 2
show_percentage = false

[node name="Timer" type="Timer" parent="SkillCooldowns/MarginContainer/HBoxContainer/SecondaryAttack"]
one_shot = true

[node name="Background" type="TextureRect" parent="SkillCooldowns/MarginContainer/HBoxContainer/SecondaryAttack"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -34.5
offset_right = 34.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_vxf74")
expand_mode = 2

[node name="DashCooldown" type="TextureRect" parent="SkillCooldowns/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_0iicw")
expand_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="SkillCooldowns/MarginContainer/HBoxContainer/DashCooldown"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_kry3j")
theme_override_styles/fill = SubResource("StyleBoxFlat_21xkr")
fill_mode = 2
show_percentage = false

[node name="Timer" type="Timer" parent="SkillCooldowns/MarginContainer/HBoxContainer/DashCooldown"]
one_shot = true

[node name="ActiveItem" type="TextureRect" parent="SkillCooldowns/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_ba8gd")
expand_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="SkillCooldowns/MarginContainer/HBoxContainer/ActiveItem"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_kry3j")
theme_override_styles/fill = SubResource("StyleBoxFlat_21xkr")
fill_mode = 2
show_percentage = false

[node name="Timer" type="Timer" parent="SkillCooldowns/MarginContainer/HBoxContainer/ActiveItem"]
one_shot = true

[node name="Background" type="TextureRect" parent="SkillCooldowns/MarginContainer/HBoxContainer/ActiveItem"]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -34.5
offset_right = 34.5
offset_bottom = 34.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_lkt4f")
expand_mode = 2

[node name="Inventory" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Inventory"]
modulate = Color(1, 1, 1, 0.5019608)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Backpack" type="GridContainer" parent="Inventory"]
layout_mode = 0
offset_left = 213.0
offset_top = 302.0
offset_right = 473.0
offset_bottom = 474.0
columns = 3

[node name="Slot1" parent="Inventory/Backpack" instance=ExtResource("10_36s6t")]
layout_mode = 2

[node name="Slot2" parent="Inventory/Backpack" instance=ExtResource("10_36s6t")]
layout_mode = 2
slot_name = "Backpack"

[node name="Slot3" parent="Inventory/Backpack" instance=ExtResource("10_36s6t")]
layout_mode = 2

[node name="Slot4" parent="Inventory/Backpack" instance=ExtResource("10_36s6t")]
layout_mode = 2

[node name="Slot5" parent="Inventory/Backpack" instance=ExtResource("10_36s6t")]
layout_mode = 2

[node name="Slot6" parent="Inventory/Backpack" instance=ExtResource("10_36s6t")]
layout_mode = 2

[node name="AugmentSlots" type="Control" parent="Inventory"]
layout_mode = 1
anchor_left = 0.418
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -63.559998
offset_top = -42.0
offset_right = -64.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2

[node name="Survivability" parent="Inventory/AugmentSlots" instance=ExtResource("10_36s6t")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 271.0
offset_top = 144.0
offset_right = 355.0
offset_bottom = 228.0
grow_horizontal = 1
grow_vertical = 1
script = ExtResource("9_pbtju")
slot_name = "Survivability"
type = 1

[node name="Movement" parent="Inventory/AugmentSlots" instance=ExtResource("10_36s6t")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 516.0
offset_top = 594.0
offset_right = 600.0
offset_bottom = 678.0
grow_horizontal = 1
grow_vertical = 1
script = ExtResource("9_pbtju")
slot_name = "Movement"
type = 2

[node name="Utility" parent="Inventory/AugmentSlots" instance=ExtResource("10_36s6t")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 271.0
offset_top = 594.0
offset_right = 355.0
offset_bottom = 678.0
grow_horizontal = 1
grow_vertical = 1
script = ExtResource("9_pbtju")
slot_name = "Utility"
type = 3

[node name="Damage" parent="Inventory/AugmentSlots" instance=ExtResource("10_36s6t")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 516.0
offset_top = 144.0
offset_right = 600.0
offset_bottom = 228.0
grow_horizontal = 1
grow_vertical = 1
script = ExtResource("9_pbtju")
slot_name = "Damage"
type = 4

[node name="PrimaryAttack" parent="Inventory/AugmentSlots" instance=ExtResource("10_36s6t")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 166.0
offset_top = 350.0
offset_right = 250.0
offset_bottom = 434.0
grow_horizontal = 1
grow_vertical = 1
script = ExtResource("9_pbtju")
slot_name = "Light Attack"
type = 6

[node name="SecondaryAttack" parent="Inventory/AugmentSlots" instance=ExtResource("10_36s6t")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 623.0
offset_top = 350.0
offset_right = 707.0
offset_bottom = 434.0
grow_horizontal = 1
grow_vertical = 1
script = ExtResource("9_pbtju")
slot_name = "Heavy Attack"
type = 7

[node name="ActiveItem" parent="Inventory/AugmentSlots" instance=ExtResource("10_36s6t")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 397.0
offset_top = 143.0
offset_right = 481.0
offset_bottom = 227.0
grow_horizontal = 1
grow_vertical = 1
script = ExtResource("9_pbtju")
slot_name = "Brainchip"
type = 5

[node name="TrashSlot" parent="Inventory" instance=ExtResource("10_36s6t")]
modulate = Color(1, 0, 0, 1)
self_modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 480.0
offset_top = 390.0
offset_right = 564.0
offset_bottom = 474.00006
grow_horizontal = 1
grow_vertical = 1
script = ExtResource("9_36s6t")
slot_name = "Trash"

[node name="Panel2" type="Panel" parent="Inventory"]
layout_mode = 0
offset_left = 812.0
offset_top = 202.0
offset_right = 1000.0
offset_bottom = 533.0

[node name="TextureRect" type="TextureRect" parent="Inventory/Panel2"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -165.5
offset_right = 165.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_yidpd")
expand_mode = 2
stretch_mode = 5

[node name="lines" type="Control" parent="Inventory/Panel2"]
anchors_preset = 0
offset_left = -812.0
offset_top = -202.0
offset_right = -812.0
offset_bottom = -202.0

[node name="Line2D" type="Line2D" parent="Inventory/Panel2/lines"]
position = Vector2(-250, -2)
points = PackedVector2Array(1033, 187, 1033, 296, 1155, 296)
width = 2.0
default_color = Color(0.4506483, 0.4506483, 0.45064825, 1)

[node name="Line2D2" type="Line2D" parent="Inventory/Panel2/lines"]
position = Vector2(-270, 5)
points = PackedVector2Array(1177, 321, 1299, 321, 1299, 180)
width = 2.0
default_color = Color(0.4506483, 0.4506483, 0.45064825, 1)

[node name="Line2D3" type="Line2D" parent="Inventory/Panel2/lines"]
position = Vector2(-244, 3)
points = PackedVector2Array(1096, 375, 1029, 375, 1029, 343, 964, 343)
width = 2.0
default_color = Color(0.4506483, 0.4506483, 0.45064825, 1)

[node name="Line2D4" type="Line2D" parent="Inventory/Panel2/lines"]
position = Vector2(-250, 4)
points = PackedVector2Array(1344, 343, 1296, 343, 1296, 374, 1211, 374)
width = 2.0
default_color = Color(0.4506483, 0.4506483, 0.45064825, 1)

[node name="Line2D5" type="Line2D" parent="Inventory/Panel2/lines"]
position = Vector2(-253, 11)
points = PackedVector2Array(1196, 495, 1218, 495, 1218, 578, 1240, 578)
width = 2.0
default_color = Color(0.4506483, 0.4506483, 0.45064825, 1)

[node name="Line2D6" type="Line2D" parent="Inventory/Panel2/lines"]
position = Vector2(-251, 2)
points = PackedVector2Array(1124, 406, 1100, 406, 1100, 587, 1075, 587)
width = 2.0
default_color = Color(0.4506483, 0.4506483, 0.45064825, 1)

[node name="Line2D7" type="Line2D" parent="Inventory/Panel2/lines"]
position = Vector2(-250, 0)
points = PackedVector2Array(1157, 225, 1157, 183)
width = 2.0
default_color = Color(0.4506483, 0.4506483, 0.45064825, 1)

[node name="ItemSelection" type="Control" parent="Inventory"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -611.0
offset_top = -304.0
offset_right = -23.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_484xk")

[node name="Panel" type="Panel" parent="Inventory/ItemSelection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.5
offset_top = -89.5
offset_right = 245.5
offset_bottom = 89.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Inventory/ItemSelection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -63.5
offset_right = 198.0
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Inventory/ItemSelection/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center] Pick one augment:"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="Inventory/ItemSelection/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SelectionSlot1" parent="Inventory/ItemSelection/VBoxContainer/HBoxContainer" instance=ExtResource("10_36s6t")]
layout_mode = 2
script = ExtResource("12_yidpd")

[node name="SelectionSlot2" parent="Inventory/ItemSelection/VBoxContainer/HBoxContainer" instance=ExtResource("10_36s6t")]
layout_mode = 2
script = ExtResource("12_yidpd")

[node name="SelectionSlot3" parent="Inventory/ItemSelection/VBoxContainer/HBoxContainer" instance=ExtResource("10_36s6t")]
layout_mode = 2
script = ExtResource("12_yidpd")

[node name="SelectionSlot4" parent="Inventory/ItemSelection/VBoxContainer/HBoxContainer" instance=ExtResource("10_36s6t")]
layout_mode = 2
script = ExtResource("12_yidpd")

[node name="SelectionSlot5" parent="Inventory/ItemSelection/VBoxContainer/HBoxContainer" instance=ExtResource("10_36s6t")]
layout_mode = 2
script = ExtResource("12_yidpd")

[node name="MarginContainer" type="MarginContainer" parent="Inventory/ItemSelection/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = -60
theme_override_constants/margin_right = 20

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_lkt4f")

[node name="Panel" type="Panel" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -125.0
offset_right = 100.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="PauseMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]GAME PAUSED

"
fit_content = true

[node name="ContinueButton" type="Button" parent="PauseMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"
script = ExtResource("11_wfkbc")

[node name="SettingsButton" type="Button" parent="PauseMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
script = ExtResource("11_wfkbc")

[node name="QuitButton" type="Button" parent="PauseMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"
script = ExtResource("11_wfkbc")

[node name="SettingsMenu" parent="PauseMenu" instance=ExtResource("16_36s6t")]
layout_mode = 0

[node name="GameOverScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("23_vxf74")

[node name="Panel" type="Panel" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="GameOverScreen/Panel"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="YOU DIED" type="RichTextLabel" parent="GameOverScreen/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center] [color=red]YOU DIED
"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverScreen/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 50

[node name="cause_of_death" type="RichTextLabel" parent="GameOverScreen/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Cause of death: "
fit_content = true

[node name="time_alive" type="RichTextLabel" parent="GameOverScreen/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Time alive: "
fit_content = true

[node name="stages_cleared" type="RichTextLabel" parent="GameOverScreen/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Stages cleared: "
fit_content = true

[node name="enemies_killed" type="RichTextLabel" parent="GameOverScreen/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Enemies killed: "
fit_content = true

[node name="damage_dealt" type="RichTextLabel" parent="GameOverScreen/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Total damage dealt: "
fit_content = true

[node name="damage_taken" type="RichTextLabel" parent="GameOverScreen/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Total damage taken: "
fit_content = true

[node name="items_picked_up" type="RichTextLabel" parent="GameOverScreen/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Items picked up:  "
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="GameOverScreen/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="Panel" type="Panel" parent="GameOverScreen/Panel/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="GameOverScreen/Panel/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("19_pbtju")
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="GameOverScreen/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50

[node name="restart_button" type="Button" parent="GameOverScreen/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Restart"
script = ExtResource("11_wfkbc")

[node name="quit_button" type="Button" parent="GameOverScreen/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Quit"
script = ExtResource("11_wfkbc")

[connection signal="pressed" from="PauseMenu/Panel/MarginContainer/VBoxContainer/ContinueButton" to="PauseMenu" method="_on_continue_button_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/MarginContainer/VBoxContainer/SettingsButton" to="PauseMenu" method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/MarginContainer/VBoxContainer/QuitButton" to="PauseMenu" method="_on_quit_button_pressed"]
[connection signal="relay_back_to_menu_signal" from="PauseMenu/SettingsMenu" to="PauseMenu" method="_on_settings_menu_relay_back_to_menu_signal"]
[connection signal="pressed" from="GameOverScreen/Panel/MarginContainer/VBoxContainer/HBoxContainer2/restart_button" to="GameOverScreen" method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverScreen/Panel/MarginContainer/VBoxContainer/HBoxContainer2/quit_button" to="GameOverScreen" method="_on_quit_button_pressed"]
